Feat: db test